--- a/JSheets/styles.css
+++ b/JSheets/styles.css
@@ -12,14 +12,13 @@ body {
 table {
 	border-collapse:collapse;
 	margin:auto;
+	max-width:600px;
 }
 td {
 	border:1px solid black;
-	max-width:100px;
-	width:100px;
+	min-width:100px;
 	height:20px;
 	padding:2px;
-	overflow: hidden;
     text-overflow:clip;
     white-space: nowrap;
 }
@@ -47,11 +46,42 @@ td {
 }
 th {
 	border:1px solid black;
-	max-width:100px;
+	min-width:100px;
 	width:100px;
 	height:20px;
 	padding:2px;
 	background-color:#444;
 	color:#bbb;
 	text-align:center;
+	background-clip: padding-box;
+}
+tr th {
+	position: sticky;
+	top: 0;
+	left:0;
+	z-index: 10;
+}
+#holder {
+	overflow-x:scroll;
+	overflow-y:scroll;
+	max-height:85vh;
+	max-width:98vw;
+	position:absolute;
+}
+#holder::-webkit-scrollbar {
+	width:10px;
+	height:10px;
+	background-color:none;
+	scroll-margin-left:40px;
+}
+#holder::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+#holder::-webkit-scrollbar-thumb {
+  background: #AAA;
+  border-radius: 10px;
+}
+#holder::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0);
 }
