--- a/JSheets/styles.css
+++ b/JSheets/styles.css
@@ -11,35 +11,16 @@ body {
 }
 table {
 	border-collapse:collapse;
+	table-layout:fixed;
 	margin:auto;
 	max-width:600px;
 }
 td {
 	border:1px solid black;
-	min-width:100px;
+	max-width:100px;
 	height:20px;
 	padding:2px;
-    text-overflow:clip;
-    white-space: nowrap;
-}
-.colors {
-	background-color:white;
-	width:50px;
-	height:40px;
-	font-weight:bold;
-	display:inline-block;
-}
-.colors input {
-	width:48px;
-	border-style:none;
-	background-color:white;
-}
-.colors img {
-	display:block;
-	margin:auto;
-}
-.colors p {
-	color:black;
+    overflow:hidden;
 }
 #a {
 	display:none;
@@ -84,4 +65,52 @@ tr th {
 }
 #holder::-webkit-scrollbar-corner {
   background: rgba(0,0,0,0);
+}
+a {
+	color:springgreen;
+}
+#topBar {
+	background-color:gray;
+	height:6vh;
+	padding:2px;
+}
+#topBar button {
+	width:6vw;
+	height:5vh;
+	background-color:white;
+	border:1px solid black;
+	transform:translate(0px,-1vh);
+}
+.colors {
+	background-color:white;
+	width:6vw;
+	height:5vh;
+	font-weight:bold;
+	display:inline-block;
+	transform:translate(0px,.2vh);
+	border:1px solid black;
+}
+.colors input {
+	width:5vh;
+	border-style:none;
+	background-color:white;
+}
+.colors img {
+	display:block;
+	margin:auto;
+}
+.colors p {
+	color:black;
+}
+input[type="button"] {
+	width:6vw;
+	height:5vh;
+	background-color:white;
+	border:1px solid black;
+	transform:translate(0px,-1vh);
+}
+input[type="text"] {
+	height:4.9vh;
+	transform:translate(0px,-1vh);
+	border:1px solid black;
 }
