--- a/wtminifangame/styles.css
+++ b/wtminifangame/styles.css
@@ -28,8 +28,18 @@ body {
 .col:nth-child(4) label {
     margin-top: 10vh;
 }
-h1 {
+.names {
     margin-bottom: 20px;
+    background-color: transparent;
+    display:block;
+    margin:auto;
+    color:#DDD;
+    border: none;
+    outline: none;
+    text-align: center;
+}
+::placeholder {
+    color:#DDD;
 }
 select {
     margin-bottom:20px;
@@ -46,7 +56,7 @@ td, th {
     height: 49vh;
 }
 label {
-    width: 5vw;
+    width: 10vw;
     text-align: left;
     display: inline-block;
 }
