--- a/wtminifangame/styles.css
+++ b/wtminifangame/styles.css
@@ -74,7 +74,7 @@ input {
     border: 1px solid black;
     padding:2px;
 }
-@media (max-width: 980px) {
+@media only screen and (max-width: 600px) {
     body {
         background-color:#444;
         color:#DDD;
