--- a/wtminifangame/styles.css
+++ b/wtminifangame/styles.css
@@ -16,6 +16,7 @@ body {
 .row {
     background-color:#122;
     border:1px solid white;
+    padding: 1%;
 }
 .col {
     background-color:#122;
@@ -53,9 +54,11 @@ td, th {
     border:1px solid white;
 }
 label {
-    width: 10vw;
     text-align: left;
     display: inline-block;
+}
+.row label {
+    width: 7vw;
 }
 h2 {
     margin: 10px;
@@ -83,5 +86,16 @@ input {
         display: grid;
         text-align: center;
         grid-template-areas: "p1" "p2" "p3" "p4" "tools";
+    }
+    .row label {
+        width: 22vw;
+    }
+    .row input:last-of-type {
+        width: 15vw;
+    }
+}
+@media only screen and (max-width: 320px) {
+    .row label {
+        width: 25vw;
     }
 }
