--- a/Triggle/styles.css
+++ b/Triggle/styles.css
@@ -3,6 +3,11 @@
     src: url("ArialMonospaced.ttf");
 }
 
+@font-face {
+    font-family: "Fontello";
+    src: url("fontello.ttf");
+}
+
 :root {
     --background: #212121;
     --text: #DDD;
@@ -14,15 +19,43 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    height: 100%;
+    height: 100vh;
     background-color: var(--background);
     color: var(--text);
     font-family: "Arial Monospaced";
     padding: 1%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    font-size: 1.4vw;
+    user-select: none;
+}
+
+nav>* {
+    display: inline;
+}
+
+nav button {
+    width: 2vw;
+    height: 2vw;
+    border-radius: 100%;
+    border: 3px solid var(--text);
+    color: var(--text);
+    font-size: 1.4vw;
+    position: relative;
+    background-color: transparent;
 }
 
 table {
@@ -46,8 +79,11 @@ td {
 
 #keyboard {
     display: block;
-    margin: 0 8vw;
     user-select: none;
+    bottom: 1vh;
+    margin: auto;
+    left: 0;
+    right: 0;
 }
 
 #keyboard .row {
@@ -110,28 +146,31 @@ td {
     from {
         transform: translateX(0);
     }
+
     25% {
         transform: translateX(0.6vw);
     }
+
     75% {
         transform: translateX(-0.6vw);
     }
+
     to {
         transform: translateX(0);
     }
 }
 
 .right {
-    background-color: var(--right);
-    color: var(--background);
+    background-color: var(--right) !important;
+    color: var(--background) !important;
 }
 
 .wrong {
-    background-color: var(--wrong);
-    color: var(--background);
+    background-color: var(--wrong) !important;
+    color: var(--background) !important;
 }
 
 .half {
-    background-color: var(--half);
-    color: var(--background);
+    background-color: var(--half) !important;
+    color: var(--background) !important;
 }
