--- a/ocmaker2/styles.css
+++ b/ocmaker2/styles.css
@@ -86,10 +86,12 @@ label {
 .chartInputs select {
   width: 100%;
   text-align: center;
+  padding: 2px;
 }
 
 input {
   margin: 5px;
+  padding: 2px;
 }
 
 #inputs,
@@ -122,4 +124,9 @@ input:focus {
 .triggerInputs select {
   width: 15vw;
   padding: 5px;
+}
+
+#bigCanvasContainer {
+  overflow-x: hidden;
+  max-width: 100vw;
 }
