Bagworm Tag, Fixed Fonts Again

--- a/ocmaker2/styles.css
+++ b/ocmaker2/styles.css
@@ -126,6 +126,11 @@ input:focus {
 }
 
 #bigCanvasContainer {
-  overflow-x: scroll;
+  overflow-x: auto;
   max-width: 100vw;
+}
+
+.fontLoader {
+  opacity: 0;
+  height: 0;
 }
