--- a/ocmaker2/mobile.css
+++ b/ocmaker2/mobile.css
@@ -51,4 +51,56 @@
         font-size: 100%;
     }
 
+    /** From Dusty **/
+    * {
+        font-size: 5vw;
+        box-sizing: border-box;
+        max-width: 100vw;
+    }
+
+    div {
+        margin: 0 auto;
+    }
+
+    table {
+        width: 98%;
+    }
+
+    label, input, select {
+        display: block;
+        margin: 5px auto;
+    }
+
+    .triggerInputs select, #inputs, .chartInputsb {
+        margin: 0;
+    }
+
+    .chartInputs {
+        width: 98vw;
+    }
+
+    td {
+        max-width: 100%;
+        vertical-align: bottom;
+    }
+
+    .chartInputs label, .chartInputs input {
+        display: block;
+        width: 100%;
+        max-width: 44vw;
+        width: 44vw;
+    }
+
+    #chartInputs2 td, #chartInputs2 input {
+        max-width: 30vw;
+    }
+
+    .triggerInputs select {
+        width: 45vw;
+    }
+
+    .chartInputs~.chartInputs input, .chartInputs~.chartInputs label,
+    .chartInputs~.chartInputs select {
+        max-width: 24vw;
+    }
 }
